--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
+    "lint:css": "stylelint '**/*.scss' --fix",
+    "lint:all": "npm run lint && npm run lint:css",
     "prettier": "prettier --check --ignore-unknown src/",
     "prettier:fix": "prettier ./src --write --ignore-unknown"
   },
@@ -23,6 +25,9 @@
     "globals": "^16.0.0",
     "prettier": "3.5.3",
     "sass": "^1.86.0",
+    "stylelint": "^16.17.0",
+    "stylelint-config-standard": "^37.0.0",
+    "stylelint-scss": "^6.11.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.28.0",
     "vite": "^6.2.0"
