--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
-    "lint:css": "stylelint '**/*.scss' --fix",
+    "lint:css": "stylelint **/*.scss --fix",
     "lint:all": "npm run lint && npm run lint:css",
     "prettier": "prettier --check --ignore-unknown src/",
     "prettier:fix": "prettier ./src --write --ignore-unknown"
@@ -26,7 +26,9 @@
     "prettier": "3.5.3",
     "sass": "^1.86.0",
     "stylelint": "^16.17.0",
+    "stylelint-config-scss": "^1.0.0-security",
     "stylelint-config-standard": "^37.0.0",
+    "stylelint-config-standard-scss": "^14.0.0",
     "stylelint-scss": "^6.11.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.28.0",
