--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,9 @@
       "@consts/*": ["src/consts/*"],
       "@assets/*": ["src/assets/*"],
       "@pages/*": ["src/pages/*"],
-      "@utils/*": ["src/utils/*"]
+      "@utils/*": ["src/utils/*"],
+      "@models/*": ["src/models/*"],
+      "@data/*": ["src/data/*"]
     }
   },
 
