--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
       "@pages/*": ["src/pages/*"],
       "@utils/*": ["src/utils/*"],
       "@models/*": ["src/models/*"],
-      "@data/*": ["src/data/*"]
+      "@data/*": ["src/data/*"],
+      "@controllers/*": ["src/controllers/*"]
     }
   },
 
